---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/functions-4.prql
---
SELECT
  *,
  ((temp_c - 32) / 1.8 - 0) / 100 AS boiling_proportion
FROM
  kettles
